<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fragments.Profile" android:background="#FFFFFF">

    <TextView
            android:id="@+id/userNameText"
            android:layout_width="136dp"
            android:layout_height="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/userNameValue"
            android:text="@string/profile_user_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="227dp"
            android:layout_height="32dp"
            android:id="@+id/userNameValue"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/userNameText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp"
            android:textStyle="italic" android:visibility="visible"/>
    <TextView
            android:layout_width="136dp"
            android:layout_height="28dp"
            android:id="@+id/userLastNameText"
            android:textSize="20sp"
            android:text="@string/userLastNameValue"
            app:layout_constraintTop_toBottomOf="@+id/userNameText"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@+id/userLastNameValue"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="221dp"
            android:layout_height="33dp"
            android:id="@+id/userLastNameValue"
            app:layout_constraintStart_toEndOf="@+id/userLastNameText"
            app:layout_constraintTop_toBottomOf="@+id/userNameValue"
            android:layout_marginTop="32dp"
            android:textSize="20sp" android:textStyle="italic" android:visibility="visible"/>
    <ImageView
            android:src="@android:drawable/ic_menu_camera"
            android:alpha="0.15"
            android:scaleType="fitCenter"
            android:layout_width="171dp"
            android:layout_height="149dp"
            android:id="@+id/profileImage"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userLastNameText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="224dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/userEmailValue"
            android:layout_width="136dp"
            android:layout_height="28dp"
            android:id="@+id/userEmailText"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userEmailValue"/>
    <TextView
            android:layout_width="221dp"
            android:layout_height="33dp"
            android:id="@+id/userEmailValue"
            app:layout_constraintStart_toEndOf="@+id/userEmailText"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" android:visibility="visible"/>
    <TextView
            android:text="@string/userEvaluationText"
            android:layout_width="136dp"
            android:layout_height="28dp"
            android:id="@+id/userEvaluation"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userEmailText" android:textSize="20sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="221dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toEndOf="@+id/userEvaluation" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userEmailValue" android:id="@+id/userEvaluationValue"
            android:visibility="visible"/>
    <Button
            android:text="@string/profileEditButton"
            android:layout_width="109dp"
            android:layout_height="39dp"
            android:id="@+id/profileEditButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="164dp"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/userEvaluation"
            android:visibility="visible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEdit" android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/userNameText"
            android:layout_marginStart="8dp" android:hint="@string/nameHint" android:visibility="invisible"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastEdit"
            app:layout_constraintStart_toEndOf="@+id/userLastNameText" android:layout_marginStart="12dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/nameEdit"
            android:hint="@string/lastNameHint" android:visibility="invisible"/>
    <Button
            android:text="@string/profile_image_edit"
            android:layout_width="143dp"
            android:layout_height="58dp"
            android:id="@+id/imageEdit" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/lastEdit" app:layout_constraintStart_toEndOf="@+id/profileImage"
            android:layout_marginStart="24dp" android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEdit"
            app:layout_constraintStart_toEndOf="@+id/userEmailText" android:layout_marginStart="8dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/imageEdit"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/password_edit_title"
            android:layout_width="202dp"
            android:layout_height="30dp"
            android:id="@+id/passText" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/userEvaluation" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="20sp" android:textStyle="bold"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/passEdit"
            android:hint="@string/passwordHint" android:layout_marginTop="132dp"
            app:layout_constraintTop_toBottomOf="@+id/userEmailValue"
            android:layout_marginStart="136dp" app:layout_constraintStart_toStartOf="@+id/passText"
            android:visibility="invisible"/>
    <Button
            android:text="@string/commit_button_title"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:id="@+id/commitButton" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/passText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:visibility="invisible"/>
    <Button
            android:text="@string/cancel_button_title"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:id="@+id/cancelEdit"
            app:layout_constraintTop_toBottomOf="@+id/passEdit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:visibility="invisible"/>


</android.support.constraint.ConstraintLayout>
