<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddMethods">

    <TextView
            android:text="@string/new_method_title"
            android:layout_width="314dp"
            android:layout_height="42dp"
            android:id="@+id/newMethodTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/card_number_title"
            android:layout_width="127dp"
            android:layout_height="39dp"
            android:id="@+id/numberCardTitle" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/newMethodTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/card_name_title"
            android:layout_width="128dp"
            android:layout_height="37dp"
            android:id="@+id/nameCardTitle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/numberCardTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" tools:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/card_type_title"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:id="@+id/cardTypeTitle" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/nameCardTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="108dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.174" android:textSize="20sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/numberEdit"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/newMethodTitle"
            app:layout_constraintStart_toEndOf="@+id/numberCardTitle" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/nameEdit" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/numberEdit" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/nameCardTitle"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.8"/>
    <CheckBox
            android:text="@string/credit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creditCheck" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTypeTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:checked="false"/>
    <CheckBox
            android:text="@string/debit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/debitCheck" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTypeTitle"
            app:layout_constraintStart_toEndOf="@+id/creditCheck" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/paypalCheck" android:layout_marginEnd="8dp" android:checked="false"/>
    <CheckBox
            android:text="@string/paypal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paypalCheck" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTypeTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp" android:clickable="false"/>
    <Button
            android:text="@string/add_new_method_button"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:id="@+id/addNewMethod" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/debitCheck" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.03"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"/>
    <Button
            android:text="@string/cancel_button_title"
            android:layout_width="108dp"
            android:layout_height="53dp"
            android:id="@+id/cancelButton" android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/debitCheck" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.035"/>
</android.support.constraint.ConstraintLayout>