<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.FieldActivity">

    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldTitle"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/fab_margin"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="30sp"/>
    <TextView
            android:text="@string/price_per_hour_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceTitle" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fieldTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fab_margin"
            android:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceValue" app:layout_constraintStart_toEndOf="@+id/priceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/fieldTitle"
            app:layout_constraintHorizontal_bias="0.68"/>
    <TextView
            android:text="@string/sport_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sportTitle"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/priceTitle" app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" android:textSize="20sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sportValue" app:layout_constraintStart_toEndOf="@+id/sportTitle"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/priceValue" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/description_title"
            android:layout_width="134dp"
            android:layout_height="32dp"
            android:id="@+id/descriptionTitle" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/sportTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" android:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:layout_width="202dp"
            android:layout_height="152dp"
            android:id="@+id/descriptionValue" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/descriptionTitle" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.822" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/sportValue"/>

    <Button
            android:text="@string/rent_button_field"
            android:layout_width="132dp"
            android:layout_height="47dp"
            android:id="@+id/seeRentButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"
            app:layout_constraintEnd_toStartOf="@+id/descriptionValue" android:layout_marginEnd="@dimen/fab_margin"/>
    <Button
            android:text="@string/match_button_field"
            android:layout_width="133dp"
            android:layout_height="46dp"
            android:id="@+id/matchButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seeRentButton"
            app:layout_constraintEnd_toStartOf="@+id/descriptionValue" android:layout_marginEnd="@dimen/fab_margin"/>
    <ScrollView
            android:id="@+id/firstScrollview"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/matchButton" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.335"
                app:layout_constraintVertical_bias="0.312">
        <ListView
                android:layout_width="236dp"
                android:layout_height="126dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/descriptionValue"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:id="@+id/rentList" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.216"/>
    </ScrollView>

    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/matchButton" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.335"
                app:layout_constraintVertical_bias="0.312">
        <ListView
                android:layout_width="236dp"
                android:layout_height="126dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:id="@+id/postList" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.216"/>
    </ScrollView>
</android.support.constraint.ConstraintLayout>